# beepboop

./: app.py  ingest.py  plots.py  pyproject.toml  readme.md  requirements.txt  tests.py
.dev/: data_prep.ipynb
.dev/data/: FY 2024 Final Property Assessed Valuations By Street Location Website - FY 2024 FINAL.csv  weston.json
.github/workflows/: github-actions-demo.yml  python-and-unix-testing.yml
assets/: style.css  tooltip.js
