[tool.poetry]
name = "beepboop"
version = "0.1.0"
description = ""
authors = ["Rob Selover <rselover@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.17.0"
pandas = "^2.2.2"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.1.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
